Fixed tooltip spacing issue on mobile for nodelink

--- a/static/css/style.css
+++ b/static/css/style.css
@@ -141,7 +141,7 @@ strong {
     /*}*/
 
     #nodelink-tile, #network-tile {
-        max-width: 98vw;
+        max-width: 93vw;
     }
 
     #network-wrapper {
